# chirp-web

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  converter.py  main.py
app/routers/: api.py  pages.py
app/static/: app.js  i18n.js  style.css
app/templates/: base.html  help.html  index.html
