[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chirp-web"
version = "0.1.0"
description = "Web-based radio memory file converter powered by CHIRP"
requires-python = ">=3.10"
license = "GPL-3.0-only"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["httpx", "pytest", "pytest-asyncio"]
